Update compiler language version to 17 and add vector module